chore(aap): modernize legacy API calls (Modernizer-driven)
Ran org.gaul:modernizer-maven-plugin (javaVersion=26) and applied every
modernization it flagged. All mechanical, no behaviour change.

Production code:
  - FileJwksProvider (5 sites):     Paths.get(path) → Path.of(path)
                                    (dropped now-unused Paths import)
  - DefaultKeyManager:              Collections.emptyList()/emptyMap() → List.of()/Map.of()
  - DefaultKeyManager (7 sites):    Optional.get() → Optional.orElseThrow()
  - WptValidator (4 sites):         String.format(...) → "...".formatted(...)
  - JwkConverter:                   String.format(...) → "...".formatted(...)
  - WorkloadProofValidator:         String.format(...) → "...".formatted(...)
  - LayerValidationResult:          Collections.emptyList() → List.of()

Tests:
  - InMemoryKeyStoreTest (14 sites): Optional.get() → Optional.orElseThrow()
  - JwksProviderTest (2 sites):     Collections.singletonList(x) → List.of(x)
  - DefaultKeyManagerTest (2):      Collections.emptyList() → List.of()
  - JwksConsumerKeyResolverTest:    Collections.emptyMap() → Map.of()
  - Dropped 3 now-unused `import java.util.Collections;`

mvn modernizer (failOnViolations=true): green.
mvn test: 781 unit tests pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>